...
/// Encapsulates the visibility icon state internally so consumers don't need
/// to manage a `_isPasswordVisible` boolean themselves.
class PasswordTextFormField extends StatefulWidget {
  const PasswordTextFormField({
    super.key,
    required this.controller,
    this.labelText = 'Password',
    this.prefixIcon = Icons.lock_outline,
    this.enabled = true,
    this.validator,
    this.autofillHints = const [AutofillHints.password],
    this.textInputAction = TextInputAction.done,
    this.onFieldSubmitted,
...
